--- a/ArcadeMatch.Avalonia/Controls/Tabs.axaml
+++ b/ArcadeMatch.Avalonia/Controls/Tabs.axaml
@@ -3,10 +3,24 @@
     x:DataType="vm:TabsViewModel"
     xmlns="https://github.com/avaloniaui"
     xmlns:converters="clr-namespace:ArcadeMatch.Avalonia.Converters"
+    xmlns:controls="clr-namespace:ArcadeMatch.Avalonia.Controls"
+    xmlns:sessionVm="clr-namespace:ArcadeMatch.Avalonia.ViewModels.Sessions"
     xmlns:vm="clr-namespace:ArcadeMatch.Avalonia.ViewModels.Tabs"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <UserControl.Resources>
         <converters:IsLoggedInToBrushConverter x:Key="IsLoggedInToBrushConverter" />
+        <DataTemplate DataType="{x:Type sessionVm:SessionStartViewModel}">
+            <controls:SessionStart />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type sessionVm:SessionLobbyViewModel}">
+            <controls:SessionLobby />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type sessionVm:SwipingViewModel}">
+            <controls:Swiping />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type sessionVm:MatchResultViewModel}">
+            <controls:MatchResult />
+        </DataTemplate>
     </UserControl.Resources>
     <TabControl>
         <TabItem Header="Home">
@@ -55,7 +69,7 @@
             </ScrollViewer>
         </TabItem>
         <TabItem Header="Session">
-            <ContentControl x:Name="SessionContentControl" />
+            <ContentControl Content="{Binding SelectedSession}" />
         </TabItem>
         <TabItem Header="Settings">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
