--- a/ArcadeMatch.Avalonia/Controls/SessionStart.axaml
+++ b/ArcadeMatch.Avalonia/Controls/SessionStart.axaml
@@ -1,15 +1,26 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="ArcadeMatch.Avalonia.Controls.SessionStart">
+<UserControl
+    x:Class="ArcadeMatch.Avalonia.Controls.SessionStart"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="450" Spacing="20">
-            <TextBlock Text="Join or Create Session" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
-            <TextBlock Text="Display Name"/>
-            <TextBox x:Name="DisplaynameBox" LostFocus="DisplaynameBox_LostFocus"/>
-            <Button Content="🎮 Start New Session" HorizontalAlignment="Stretch" Click="StartNewSession_OnClick"/>
-            <Button Content="🤝 Join Existing Session" HorizontalAlignment="Stretch" Click="JoinSession_OnClick"/>
-            <TextBlock Text="Session Code"/>
-            <TextBox x:Name="SessionCodeBox"/>
+            <TextBlock HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Text="Join or Create Session" />
+            <TextBlock Text="Display Name" />
+            <TextBox
+                Text="{Binding DisplayName, UpdateSourceTrigger=PropertyChanged}"
+                Watermark="Your Display-name" />
+            <Button
+                Command="{Binding StartNewSessionCommand}"
+                Content="🎮 Start New Session"
+                HorizontalAlignment="Stretch" />
+            <Button
+                Command="{Binding JoinSessionCommand}"
+                Content="🤝 Join Existing Session"
+                HorizontalAlignment="Stretch" />
+            <TextBlock Text="Session Code" />
+            <TextBox
+                MaxLength="4"
+                Text="{Binding SessionCode, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
     </Grid>
 </UserControl>
