--- a/ArcadeMatch.Avalonia/Controls/Tabs.axaml
+++ b/ArcadeMatch.Avalonia/Controls/Tabs.axaml
@@ -2,13 +2,15 @@
     x:Class="ArcadeMatch.Avalonia.Controls.Tabs"
     x:DataType="vm:TabsViewModel"
     xmlns="https://github.com/avaloniaui"
-    xmlns:converters="clr-namespace:ArcadeMatch.Avalonia.Converters"
     xmlns:controls="clr-namespace:ArcadeMatch.Avalonia.Controls"
+    xmlns:converters="clr-namespace:ArcadeMatch.Avalonia.Converters"
     xmlns:sessionVm="clr-namespace:ArcadeMatch.Avalonia.ViewModels.Sessions"
     xmlns:vm="clr-namespace:ArcadeMatch.Avalonia.ViewModels.Tabs"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <UserControl.Resources>
         <converters:IsLoggedInToBrushConverter x:Key="IsLoggedInToBrushConverter" />
+    </UserControl.Resources>
+    <UserControl.DataTemplates>
         <DataTemplate DataType="{x:Type sessionVm:SessionStartViewModel}">
             <controls:SessionStart />
         </DataTemplate>
@@ -21,7 +23,7 @@
         <DataTemplate DataType="{x:Type sessionVm:MatchResultViewModel}">
             <controls:MatchResult />
         </DataTemplate>
-    </UserControl.Resources>
+    </UserControl.DataTemplates>
     <TabControl>
         <TabItem Header="Home">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
